fix js bugs with filters on mobile

--- a/app/assets/stylesheets/web/0-620.less
+++ b/app/assets/stylesheets/web/0-620.less
@@ -1020,8 +1020,8 @@
             border-right: 5px solid transparent;
             border-top: 5px solid white;
         }
-        &:hover {
-            &+.programm__filter__checkboxs {display: block}
+        &.active {
+            &+.programm__filter__checkboxs {display: inline-block}
             &::after {
                 content: '';
                 position: absolute;
